fix: upsell overlay layout (#1086)
- Removed extra margin, padding, and width for `only-pro-content` class.
- Removed extra padding for the `upgrade-content` class.

--- a/css/settings.css
+++ b/css/settings.css
@@ -400,14 +400,14 @@ fieldset[disabled] .form-control {
 	position: absolute;
 	top: 0;
 	left: 0;
-	width: calc(100% + 60px);
+	width: 100%;
 	height: 100%;
-	margin: 0 -30px;
+	margin: 0;
 	background: rgba(255, 255, 255, 0.6);
 	-webkit-backdrop-filter: blur(4px);
   backdrop-filter: blur(4px);
 	z-index: 1;
-	padding: 30px;
+	padding:0;
 	opacity: 0;
 	visibility: hidden;
 	-webkit-transition: all 0.3s ease-in-out;
@@ -1118,7 +1118,7 @@ input.fz-switch-toggle[type=checkbox]:checked:before{
 /* FZ tab style end */
 
 .upgrade-alert{
-	padding: 10px 10px 10px 10px;
+	padding: 10px 0;
 	background: #4268CF;
 	text-align: center;
 	font-size: 14px;
